@@ -1,3 +1,12 @@
+### March xx 2021, Release version 0.9.2 ###
+
+  * ADDED:
+    * a function to test postgresql server, database and tables has been added.
+
+  * MODIFIED:
+    * time series are ploted only if a connection to the database is successful.
+
+
 ### March 1 2021, Release version 0.9.1 ###
 
   * MODIFIED:
